--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog-api",
   "version": "1.0.0",
   "description": "the blog api",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/bobbecket/blog-api#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "uuid": "^3.3.0"
   }
 }
