--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/bobbecket/blog-api#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "morgan": "^1.9.0",
     "uuid": "^3.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
